@@ -650,6 +650,14 @@ rb_obj_tap(obj)
  *        end
  */
 
+/*
+ * Document-method: initialize
+ *
+ * call-seq:
+ *    Object.new( *args )
+ *
+ * Returns a new Object. Arguments are ignored.
+ */
 
 /*
  * Not documented
@@ -2718,7 +2726,7 @@ Init_Object()
     rb_mKernel = rb_define_module("Kernel");
     rb_include_module(rb_cObject, rb_mKernel);
     rb_define_alloc_func(rb_cObject, rb_class_allocate_instance);
-    rb_define_private_method(rb_cObject, "initialize", rb_obj_dummy, 0);
+    rb_define_private_method(rb_cObject, "initialize", rb_obj_dummy, -1);
     rb_define_private_method(rb_cClass, "inherited", rb_obj_dummy, 1);
     rb_define_private_method(rb_cModule, "included", rb_obj_dummy, 1);
     rb_define_private_method(rb_cModule, "extended", rb_obj_dummy, 1);
